@@ -26,6 +26,7 @@ const crypto = require('crypto');
 const childProcess = require('child_process');
 const fs = require('fs');
 const os = require('os');
+const stream = require('stream');
 const maxmind = require('maxmind');
 const nodemailer = require('nodemailer');
 
@@ -689,9 +690,11 @@ function logerror(text) {
 }
 cdnboxStates.logerror = logerror;
 
+var logstream = fs.createWriteStream('', { "fd": process.stdout.fd });
 cdnboxStates.logconsole = function (msg) {
   if (cdnboxStates.config.logjsonobject) {
-    console.log('{ "@timestamp": "' + (new Date).toISOString() + '", ' + msg + '}');
+//    console.log('{ "@timestamp": "' + (new Date).toISOString() + '", ' + msg + '}');
+    logstream.write('{ "@timestamp": "' + (new Date).toISOString() + '", ' + msg + "}\n");
   } else {
     console.log(msg);
   }
